css error fixed for brand resizing on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,9 +22,9 @@ text-decoration: none;
   color: silver;
 }
 
-.short-text { display: none; }
+@media only screen and (max-width: 600px) {
+  .topbar-brand-text {
+    font-size: 15px;
+  }
 
-@media (max-width: 600px) {
-    .short-text { display: inline-block; }
-    .full-text { display: none; }
 }
